[package]
name = "keyrock"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.24.*", features = ["derive"] }
itertools = { version = "0.10.*" }
tokio = { version = "1.24.*", features = ["rt", "macros", "time"] }
tokio-tungstenite = { version = "0.18.*" }
futures-channel = { version = "0.3.*" }
futures-util = { version = "0.3.*" }
url = { version = "2.3.*" }
thiserror = { version = "1.0.*" }
serde = { version = "1.0.*", features = ["derive"]}
serde_json = { version = "1.0.*" }

[lib]
name = "aggregator"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"
